<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/oasis_cab"
    tools:context=".SignIn">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:src="@drawable/oasiscab_logo_head" />

    <EditText
        android:id="@+id/email_address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/logo"
        android:layout_marginStart="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginBottom="15dp"
        android:backgroundTint="@color/black"
        android:drawableLeft="@drawable/ic_phone_call"
        android:gravity="center"
        android:hint="@string/email_address_hint_string"
        android:inputType="textEmailAddress"
        android:textCursorDrawable="@drawable/cursor" />

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/email_address"
        android:layout_margin="15dp"
        android:backgroundTint="@color/black"
        android:drawableLeft="@drawable/ic_lock"
        android:gravity="center"
        android:hint="@string/password_hint_string"
        android:inputType="textPassword"
        android:textCursorDrawable="@drawable/cursor" />

    <TextView
        android:id="@+id/forgot_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/password"
        android:layout_centerHorizontal="true"
        android:text="@string/forgot_password_string"
        android:textColor="@color/black"
        android:textSize="16sp" />

    <Button
        android:id="@+id/login_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_margin="60dp"
        android:background="@drawable/button"
        android:text="@string/login_string"
        android:textColor="@color/white"
        android:textSize="14sp" />

</RelativeLayout>